maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: illegal start of simple expression
 {droite();if (estFaceMur()) {droite(); if (estFaceMur(){droite()})}; avance()}
                                                                   ^